Добавление информации о проектах

--- a/_posts/2023-08-25-issc-2023.md
+++ b/_posts/2023-08-25-issc-2023.md
@@ -2,7 +2,7 @@
 title: О конференции МНСК-2023
 author: rodkot
 date: 2023-08-25 00:34:00 +0800
-categories: [Блог, Конференции]
+categories: [Диплом, Конференции]
 tags: [news]
 ---
 
